# rnano

./: .gitignore  Cargo.toml  README.md  demo.txt  test.txt
.github/workflows/: build.yml  release.yml  shit.yml
src/: args.rs  buffer.rs  direction.rs  editor.rs  lib.rs  main.rs  version.rs
src/editor/: input.rs  prompt.rs  status.rs  ui.rs
